@@ -1,3 +1,7 @@
+2011-11-23  Christian Weiske  <cweiske@bogo>
+
+	* Add page list import via Atom feed
+
 2011-11-21  Christian Weiske  <cweiske@cweiske.de>
 
 	* hide color buttons when no/only one page configured
